<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.slickiesbrand.realoops.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_trends"
        android:orderInCategory="103"
        android:title="@string/trends"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_OopsDay"
        android:orderInCategory="103"
        android:title="@string/OopsDay"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_oopsweb"
        android:orderInCategory="104"
        android:title="@string/oops_Android_web"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_upload"
        android:orderInCategory="0"
        android:title="@string/image_upload"
        app:showAsAction="always"
        android:icon="@drawable/ic_cloud_upload"/>




</menu>
